package com.legalcase.caseservice.domain.valueobject;

/**
 * Enum representing the status of a case
 */
public enum CaseStatus {
    OPEN,
    IN_PROGRESS,
    ON_HOLD,
    CLOSED,
    ARCHIVED
} 